link js file, adding test button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>NYT Bestsellers</title>
 </head>
 <body>
-    
+    <button type="submit" id="fetch"></button>
+    <script src="app.js"></script>
 </body>
 </html>
