retrieve paperback trade fiction bestsellers data

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>NYT Bestsellers</title>
 </head>
 <body>
-    <button type="submit" id="fetch"></button>
+    <button type="submit" id="fetch">Test</button>
     <script src="app.js"></script>
+    <script src="config.js"></script>
 </body>
 </html>
