--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <button type="submit" id="fetch">Test</button>
     <script src="app.js"></script>
     <script src="config.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
