divs for potential output

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <button type="submit" id="fetch">Test</button>
+    <div id="titles"></div>
+    <div id="amazon_links"></div>
+    <div id="reviews"></div>
+    <div id="rank"></div>
     <script src="app.js"></script>
 </body>
 </html>
